--- a/src/main/java/RoomBookingSystem/RoomManagerGUI.form
+++ b/src/main/java/RoomBookingSystem/RoomManagerGUI.form
@@ -110,14 +110,16 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="tableAvailability">
+        <Component class="javax.swing.JTable" name="tableBookings">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="5" rowCount="4">
-                <Column editable="true" title="Name" type="java.lang.Object"/>
+              <Table columnCount="7" rowCount="0">
+                <Column editable="true" title="Room Name" type="java.lang.Object"/>
+                <Column editable="true" title="Date" type="java.lang.Object"/>
                 <Column editable="true" title="Time" type="java.lang.Object"/>
-                <Column editable="true" title="Spaces" type="java.lang.Object"/>
-                <Column editable="true" title="Type" type="java.lang.Object"/>
+                <Column editable="true" title="Booker Name" type="java.lang.Object"/>
+                <Column editable="true" title="Email" type="java.lang.Object"/>
+                <Column editable="true" title="Phone" type="java.lang.Object"/>
                 <Column editable="true" title="Notes" type="java.lang.Object"/>
               </Table>
             </Property>
